package seedu.address.model.person;

import static seedu.address.commons.util.CollectionUtil.requireAllNonNull;

import java.time.LocalDateTime;
import java.util.ArrayList;
import java.util.Collections;
import java.util.List;
import java.util.Objects;
import java.util.Optional;

import seedu.address.commons.util.ToStringBuilder;
import seedu.address.model.tag.Tag;


/**
 * Represents a Patient in the address book.
 * Guarantees: details are present and not null, field values are validated, immutable.
 */
public class Patient extends Person {

    private static final String MESSAGE_NOTE_INDEX_OUT_OF_BOUNDS = "Note index out of bounds: ";

    private final List<Note> notes;
    private final List<Appointment> appointment;
    private final Tag tag;
    private final Caretaker caretaker;

    /**
     * Allows Patient to be instantiated without accompanying note.
     */
    public Patient(Name name, Phone phone, Address address, Tag tag) {
        super(name, phone, address);
        this.notes = new ArrayList<>();
        this.appointment = new ArrayList<>();
        this.tag = tag;
        this.caretaker = null;
    }

    /**
     * Constructs a Patient with multiple notes and an appointment.
     * Creates a defensive copy of the provided notes list to ensure immutability.
     *
     * @param name the patient's name, must not be null
     * @param phone the patient's phone number, must not be null
     * @param address the patient's address, must not be null
     * @param tag the urgency associated with the patient condition, can be null if no tag is given
     * @param notes the list of notes for the patient, must not be null (can be empty)
     * @param appointment the list of appointments for the patient, must not be null (can be empty)
     * @throws NullPointerException if any required parameter is null
     */
    public Patient(Name name, Phone phone, Address address, Tag tag, List<Note> notes, List<Appointment> appointment) {
        super(name, phone, address);
        requireAllNonNull(notes, appointment);
        this.notes = new ArrayList<>(notes);
        this.appointment = new ArrayList<>(appointment);
        Collections.sort(this.appointment);
        this.tag = tag;
        this.caretaker = null;
    }

    /**
     * Constructs a Patient with multiple notes, multiple appointments, and a caretaker.
     * Creates a defensive copy of the provided notes list to ensure immutability.
     * This is the most comprehensive constructor supporting all patient data fields.
     *
     * @param name the patient's name, must not be null
     * @param phone the patient's phone number, must not be null
     * @param address the patient's address, must not be null
     * @param tag the urgency associated with the patient condition, can be null if no tag is given
     * @param notes the list of notes for the patient, must not be null (can be empty)
     * @param appointment the list of appointments for the patient, must not be null (can be empty)
     * @param caretaker the patient's caretaker, can be null if no caretaker is provided
     * @throws NullPointerException if any required parameter is null
     */
    public Patient(Name name, Phone phone, Address address, Tag tag, List<Note> notes, List<Appointment> appointment,
                   Caretaker caretaker) {
        super(name, phone, address);
        requireAllNonNull(notes, appointment);
        this.notes = new ArrayList<>(notes);
        this.appointment = new ArrayList<>(appointment);
        Collections.sort(this.appointment);
        this.tag = tag;
        this.caretaker = caretaker;
    }

    /**
     * Returns the notes of the patient.
     * @return the notes of the patient.
     */
    public List<Note> getNotes() {
        return Collections.unmodifiableList(notes);
    }

    /**
     * Returns the first note of the patient, or null if no notes exist.
     * This follows the same pattern as other getters - return the object or null.
     * @return the first note of the patient, or null if no notes exist.
     */
    public Note getNote() {
        return notes.isEmpty() ? null : notes.get(0);
    }

    /**
     * Returns the list of appointment of the patient.
     * @return the list of appointment of the patient.
     */
    public List<Appointment> getAppointment() {
        return Collections.unmodifiableList(appointment);
    }

    /**
     * Adds an appointment to this patient.
     * @param appointment the appointment to add
     * @return a new Patient with the appointment added
     */
    public Patient addAppointment(Appointment appointment) {
        requireAllNonNull(appointment);
        List<Appointment> newAppointments = new ArrayList<>(this.appointment);
        newAppointments.add(appointment);
        return new Patient(this.getName(), this.getPhone(), this.getAddress(),
        this.getTag().orElse(null), this.notes, newAppointments, this.getCaretaker());
    }

    /**
     * Adds a note to this patient.
     * @param note the note to add
     * @return a new Patient with the note added
     */
    public Patient addNote(Note note) {
        requireAllNonNull(note);
        List<Note> newNotes = new ArrayList<>(this.notes);
        newNotes.add(note);
        return new Patient(this.getName(), this.getPhone(), this.getAddress(),
                this.getTag().orElse(null), newNotes, this.appointment, this.getCaretaker());
    }

    /**
     * Edits a note of this patient at the specified index.
     * @param index the zero-based index of the note to edit
     * @param newNote the new note to replace the existing one
     * @return a new Patient with the note edited
     * @throws IndexOutOfBoundsException if the index is invalid
     */
    public Patient editNote(int index, Note newNote) {
        requireAllNonNull(newNote);
        if (index < 0 || index >= notes.size()) {
            throw new IndexOutOfBoundsException(MESSAGE_NOTE_INDEX_OUT_OF_BOUNDS + index);
        }
        List<Note> newNotes = new ArrayList<>(this.notes);
        newNotes.set(index, newNote);
        return new Patient(this.getName(), this.getPhone(), this.getAddress(),
                this.getTag().orElse(null), newNotes, this.appointment, this.getCaretaker());
    }

    /**
     * Edits an appointment of this patient at the specified index.
     * @param index the zero-based index of the note to edit
     * @param newAppt the new note to replace the existing one
     * @return a new Patient with the note edited
     */
    public Patient editAppointment(int index, Appointment newAppt) {
        requireAllNonNull(newAppt);
        if (index < 0 || index >= appointment.size()) {
            throw new IndexOutOfBoundsException("Appointment index out of bounds: " + index);
        }
        List<Appointment> newAppointments = new ArrayList<>(this.appointment);
        newAppointments.set(index, newAppt);
        return new Patient(this.getName(), this.getPhone(), this.getAddress(),
                this.getTag().orElse(null), this.notes , newAppointments, this.getCaretaker());
    }

    /**
     * Deletes a note of this patient at the specified index.
     * @param index the zero-based index of the note to delete
     * @return a new Patient with the note deleted
     * @throws IndexOutOfBoundsException if the index is invalid
     */
    public Patient deleteNote(int index) {
        if (index < 0 || index >= notes.size()) {
            throw new IndexOutOfBoundsException(MESSAGE_NOTE_INDEX_OUT_OF_BOUNDS + index);
        }
        List<Note> newNotes = new ArrayList<>(this.notes);
        newNotes.remove(index);
        return new Patient(this.getName(), this.getPhone(), this.getAddress(),
                this.getTag().orElse(null), newNotes, this.appointment, this.getCaretaker());
    }

    /**
     * Adds a caretaker to this patient.
     * @param caretaker the caretaker to add
     * @return a new Patient with the caretaker added
     */
    public Patient addCaretaker(Caretaker caretaker) {
        requireAllNonNull(caretaker);
        return new Patient(this.getName(), this.getPhone(), this.getAddress(),
                this.getTag().orElse(null), this.notes, this.appointment, caretaker);
    }

    /**
     * Returns the caretaker of this patient.
     * @return caretaker of this patient
     */
    public Caretaker getCaretaker() {
        return this.caretaker;
    }

    /**
     * Returns an {@link Optional} with the tag if present else return an {@link Optional#empty()}
     */
    public Optional<Tag> getTag() {
        return Optional.ofNullable(tag);
    }

    public Optional <LocalDateTime> getEarliestAppointmentDateTime() {
        return getAppointment().stream()
                .map(Appointment::getDateTime)
                .min(LocalDateTime::compareTo);
    }
    /**
     * Returns true if both persons have the same identity and data fields.
     * This defines a stronger notion of equality between two persons.
     */
    @Override
    public boolean equals(Object other) {
        if (other == this) {
            return true;
        }

        // instanceof handles nulls
        if (!(other instanceof Person)) {
            return false;
        }

        if (!(other instanceof Patient)) {
            return super.equals(other);
        }

        Patient otherPatient = (Patient) other;
        return super.equals(otherPatient)
                && notes.equals(otherPatient.notes)
                && Objects.equals(appointment, otherPatient.appointment)
                && Objects.equals(tag, otherPatient.tag);

    }

    @Override
    public int hashCode() {
        // use this method for custom fields hashing instead of implementing your own
        return Objects.hash(super.hashCode(), notes, appointment);
    }

    @Override
    public String toString() {
        ToStringBuilder sb = new ToStringBuilder(this)
                .add("name", this.getName())
                .add("phone", this.getPhone())
                .add("address", this.getAddress());

        this.getTag().ifPresent(tag -> sb.add("tag", tag));

        Note note = this.getNote();
        sb.add("note", note != null ? note.value : "No notes")
                .add("appointment", this.getAppointment())
                .add("caretaker", this.getCaretaker());

        return sb.toString();
    }
}
