@startuml
!include style.puml
skinparam arrowThickness 1.1
skinparam arrowColor MODEL_COLOR
skinparam classBackgroundColor MODEL_COLOR

AddressBook *-right-> "1" UniquePersonList
AddressBook *-right-> "1" UniqueTagList
UniqueTagList -[hidden]down- UniquePersonList
UniqueTagList -[hidden]down- UniquePersonList

UniqueTagList -right-> "*" Tag
UniquePersonList -right-> "*" Person

Person -up-> "*" Tag

abstract class Person {
}

class Patient {
}

class Caretaker {
}

Person <|-- Patient
Person <|-- Caretaker

Person *--> "1" Name
Person *--> "1" Phone
Person *--> "1" Address

Patient *--> "*" Note
Patient *--> "*" Appointment
Patient *--> "0..1" Caretaker

Caretaker *--> "1" Relationship

class VersionedAddressBook {
}
VersionedAddressBook --right-> "1" AddressBook

@enduml
